--- a/resources/linux/casparcg-media-scanner.service
+++ b/resources/linux/casparcg-media-scanner.service
@@ -3,6 +3,8 @@ Description=CasparCG Media Scanner
 After=basic.target
 
 [Service]
+User=casparcg
+Group=casparcg
 Type=simple
 WorkingDirectory=/usr/share/casparcg
 ExecStart=/usr/share/casparcg/bin/scanner
